--- a/src/index.html
+++ b/src/index.html
@@ -472,7 +472,7 @@
     <div class="bg-blue-800 text-white w-[24%] p-2 rounded-lg absolute left-90 top-18 text-center mt-26 ml-10">
       <a href="">Subscribe</a>
     </div>
-    <span class="absolute top-40 w-[90%] text-sm pt-22"><span class="font-bold">trivago N.V.</span>, Kesselstraße 5 – 7, 40221 Düsseldorf, Germany
+    <span class="absolute top-40 left-2 w-[90%] text-sm pt-22"><span class="font-bold">trivago N.V.</span>, Kesselstraße 5 – 7, 40221 Düsseldorf, Germany
 
 Copyright 2025 trivago | All rights reserved.</span>
   </div>
